// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceGroup label does not have className prop from parent 1`] = `
<div
  className=
      testClassName

>
  <div
    aria-labelledby="ChoiceGroup0-label"
    className=
        ms-ChoiceFieldGroup
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="radiogroup"
  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #333333;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            word-wrap: break-word;
          }
          &::after {
            color: #a80000;
            content: ' *';
            padding-right: 12px;
          }
      id="ChoiceGroup0-label"
      required={true}
    >
      testLabel
    </label>
    <div
      className=
          ms-ChoiceFieldGroup-flexContainer

    >
      <div
        className=
            ms-ChoiceField
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              border: none;
              box-sizing: border-box;
              color: #333333;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-top: 8px;
              min-height: 26px;
              position: relative;
            }
            & .ms-ChoiceFieldLabel {
              display: inline-block;
              font-size: 14px;
              padding-left: 26px;
            }
      >
        <div
          className=
              ms-ChoiceField-wrapper

        >
          <input
            checked={false}
            className=
                ms-ChoiceField-input
                {
                  height: 100%;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  opacity: 0;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                  width: 100%;
                }
            data-automation-id="auto1"
            id="ChoiceGroup0-1"
            name="ChoiceGroup0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="radio"
          />
          <label
            className=
                ms-ChoiceField-field
                {
                  cursor: pointer;
                  display: inline-block;
                  margin-top: 0px;
                  min-height: 20px;
                  position: relative;
                  user-select: none;
                  vertical-align: top;
                }
                &:hover .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:hover:before {
                  border-color: #333333;
                }
                &:focus .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:focus:before {
                  border-color: #333333;
                }
                &:before {
                  background-color: #ffffff;
                  border-color: #666666;
                  border-radius: 50%;
                  border-style: solid;
                  border-width: 1px;
                  box-sizing: border-box;
                  content: "";
                  display: inline-block;
                  font-weight: normal;
                  height: 20px;
                  left: 0px;
                  position: absolute;
                  top: 0px;
                  transition-duration: 200ms;
                  transition-property: border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
                &:after {
                  border-radius: 50%;
                  box-sizing: border-box;
                  content: "";
                  height: 0px;
                  left: 10px;
                  position: absolute;
                  right: 0px;
                  transition-duration: 200ms;
                  transition-property: border-width;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 0px;
                }
            htmlFor="ChoiceGroup0-1"
          >
            <span
              className="ms-ChoiceFieldLabel"
              id="ChoiceGroupLabel1-1"
            >
              1
            </span>
          </label>
        </div>
      </div>
      <div
        className=
            ms-ChoiceField
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              border: none;
              box-sizing: border-box;
              color: #333333;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-top: 8px;
              min-height: 26px;
              position: relative;
            }
            & .ms-ChoiceFieldLabel {
              display: inline-block;
              font-size: 14px;
              padding-left: 26px;
            }
      >
        <div
          className=
              ms-ChoiceField-wrapper

        >
          <input
            checked={false}
            className=
                ms-ChoiceField-input
                {
                  height: 100%;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  opacity: 0;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                  width: 100%;
                }
            id="ChoiceGroup0-2"
            name="ChoiceGroup0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="radio"
          />
          <label
            className=
                ms-ChoiceField-field
                {
                  cursor: pointer;
                  display: inline-block;
                  margin-top: 0px;
                  min-height: 20px;
                  position: relative;
                  user-select: none;
                  vertical-align: top;
                }
                &:hover .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:hover:before {
                  border-color: #333333;
                }
                &:focus .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:focus:before {
                  border-color: #333333;
                }
                &:before {
                  background-color: #ffffff;
                  border-color: #666666;
                  border-radius: 50%;
                  border-style: solid;
                  border-width: 1px;
                  box-sizing: border-box;
                  content: "";
                  display: inline-block;
                  font-weight: normal;
                  height: 20px;
                  left: 0px;
                  position: absolute;
                  top: 0px;
                  transition-duration: 200ms;
                  transition-property: border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
                &:after {
                  border-radius: 50%;
                  box-sizing: border-box;
                  content: "";
                  height: 0px;
                  left: 10px;
                  position: absolute;
                  right: 0px;
                  transition-duration: 200ms;
                  transition-property: border-width;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 0px;
                }
            htmlFor="ChoiceGroup0-2"
          >
            <span
              className="ms-ChoiceFieldLabel"
              id="ChoiceGroupLabel1-2"
            >
              2
            </span>
          </label>
        </div>
      </div>
      <div
        className=
            ms-ChoiceField
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              border: none;
              box-sizing: border-box;
              color: #333333;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-top: 8px;
              min-height: 26px;
              position: relative;
            }
            & .ms-ChoiceFieldLabel {
              display: inline-block;
              font-size: 14px;
              padding-left: 26px;
            }
      >
        <div
          className=
              ms-ChoiceField-wrapper

        >
          <input
            checked={false}
            className=
                ms-ChoiceField-input
                {
                  height: 100%;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  opacity: 0;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                  width: 100%;
                }
            id="ChoiceGroup0-3"
            name="ChoiceGroup0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="radio"
          />
          <label
            className=
                ms-ChoiceField-field
                {
                  cursor: pointer;
                  display: inline-block;
                  margin-top: 0px;
                  min-height: 20px;
                  position: relative;
                  user-select: none;
                  vertical-align: top;
                }
                &:hover .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:hover:before {
                  border-color: #333333;
                }
                &:focus .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:focus:before {
                  border-color: #333333;
                }
                &:before {
                  background-color: #ffffff;
                  border-color: #666666;
                  border-radius: 50%;
                  border-style: solid;
                  border-width: 1px;
                  box-sizing: border-box;
                  content: "";
                  display: inline-block;
                  font-weight: normal;
                  height: 20px;
                  left: 0px;
                  position: absolute;
                  top: 0px;
                  transition-duration: 200ms;
                  transition-property: border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
                &:after {
                  border-radius: 50%;
                  box-sizing: border-box;
                  content: "";
                  height: 0px;
                  left: 10px;
                  position: absolute;
                  right: 0px;
                  transition-duration: 200ms;
                  transition-property: border-width;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 0px;
                }
            htmlFor="ChoiceGroup0-3"
          >
            <span
              className="ms-ChoiceFieldLabel"
              id="ChoiceGroupLabel1-3"
            >
              3
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChoiceGroup renders ChoiceGroup correctly 1`] = `
<div
  className=
      testClassName

>
  <div
    className=
        ms-ChoiceFieldGroup
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: block;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
    role="radiogroup"
  >
    <div
      className=
          ms-ChoiceFieldGroup-flexContainer

    >
      <div
        className=
            ms-ChoiceField
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              border: none;
              box-sizing: border-box;
              color: #333333;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-top: 8px;
              min-height: 26px;
              position: relative;
            }
            & .ms-ChoiceFieldLabel {
              display: inline-block;
              font-size: 14px;
              padding-left: 26px;
            }
      >
        <div
          className=
              ms-ChoiceField-wrapper

        >
          <input
            checked={false}
            className=
                ms-ChoiceField-input
                {
                  height: 100%;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  opacity: 0;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                  width: 100%;
                }
            data-automation-id="auto1"
            id="ChoiceGroup0-1"
            name="ChoiceGroup0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="radio"
          />
          <label
            className=
                ms-ChoiceField-field
                {
                  cursor: pointer;
                  display: inline-block;
                  margin-top: 0px;
                  min-height: 20px;
                  position: relative;
                  user-select: none;
                  vertical-align: top;
                }
                &:hover .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:hover:before {
                  border-color: #333333;
                }
                &:focus .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:focus:before {
                  border-color: #333333;
                }
                &:before {
                  background-color: #ffffff;
                  border-color: #666666;
                  border-radius: 50%;
                  border-style: solid;
                  border-width: 1px;
                  box-sizing: border-box;
                  content: "";
                  display: inline-block;
                  font-weight: normal;
                  height: 20px;
                  left: 0px;
                  position: absolute;
                  top: 0px;
                  transition-duration: 200ms;
                  transition-property: border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
                &:after {
                  border-radius: 50%;
                  box-sizing: border-box;
                  content: "";
                  height: 0px;
                  left: 10px;
                  position: absolute;
                  right: 0px;
                  transition-duration: 200ms;
                  transition-property: border-width;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 0px;
                }
            htmlFor="ChoiceGroup0-1"
          >
            <span
              className="ms-ChoiceFieldLabel"
              id="ChoiceGroupLabel1-1"
            >
              1
            </span>
          </label>
        </div>
      </div>
      <div
        className=
            ms-ChoiceField
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              border: none;
              box-sizing: border-box;
              color: #333333;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-top: 8px;
              min-height: 26px;
              position: relative;
            }
            & .ms-ChoiceFieldLabel {
              display: inline-block;
              font-size: 14px;
              padding-left: 26px;
            }
      >
        <div
          className=
              ms-ChoiceField-wrapper

        >
          <input
            checked={false}
            className=
                ms-ChoiceField-input
                {
                  height: 100%;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  opacity: 0;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                  width: 100%;
                }
            id="ChoiceGroup0-2"
            name="ChoiceGroup0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="radio"
          />
          <label
            className=
                ms-ChoiceField-field
                {
                  cursor: pointer;
                  display: inline-block;
                  margin-top: 0px;
                  min-height: 20px;
                  position: relative;
                  user-select: none;
                  vertical-align: top;
                }
                &:hover .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:hover:before {
                  border-color: #333333;
                }
                &:focus .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:focus:before {
                  border-color: #333333;
                }
                &:before {
                  background-color: #ffffff;
                  border-color: #666666;
                  border-radius: 50%;
                  border-style: solid;
                  border-width: 1px;
                  box-sizing: border-box;
                  content: "";
                  display: inline-block;
                  font-weight: normal;
                  height: 20px;
                  left: 0px;
                  position: absolute;
                  top: 0px;
                  transition-duration: 200ms;
                  transition-property: border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
                &:after {
                  border-radius: 50%;
                  box-sizing: border-box;
                  content: "";
                  height: 0px;
                  left: 10px;
                  position: absolute;
                  right: 0px;
                  transition-duration: 200ms;
                  transition-property: border-width;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 0px;
                }
            htmlFor="ChoiceGroup0-2"
          >
            <span
              className="ms-ChoiceFieldLabel"
              id="ChoiceGroupLabel1-2"
            >
              2
            </span>
          </label>
        </div>
      </div>
      <div
        className=
            ms-ChoiceField
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              border: none;
              box-sizing: border-box;
              color: #333333;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              margin-top: 8px;
              min-height: 26px;
              position: relative;
            }
            & .ms-ChoiceFieldLabel {
              display: inline-block;
              font-size: 14px;
              padding-left: 26px;
            }
      >
        <div
          className=
              ms-ChoiceField-wrapper

        >
          <input
            checked={false}
            className=
                ms-ChoiceField-input
                {
                  height: 100%;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  opacity: 0;
                  position: absolute;
                  right: 0px;
                  top: 0px;
                  width: 100%;
                }
            id="ChoiceGroup0-3"
            name="ChoiceGroup0"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={true}
            type="radio"
          />
          <label
            className=
                ms-ChoiceField-field
                {
                  cursor: pointer;
                  display: inline-block;
                  margin-top: 0px;
                  min-height: 20px;
                  position: relative;
                  user-select: none;
                  vertical-align: top;
                }
                &:hover .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:hover:before {
                  border-color: #333333;
                }
                &:focus .ms-ChoiceFieldLabel {
                  color: #000000;
                }
                &:focus:before {
                  border-color: #333333;
                }
                &:before {
                  background-color: #ffffff;
                  border-color: #666666;
                  border-radius: 50%;
                  border-style: solid;
                  border-width: 1px;
                  box-sizing: border-box;
                  content: "";
                  display: inline-block;
                  font-weight: normal;
                  height: 20px;
                  left: 0px;
                  position: absolute;
                  top: 0px;
                  transition-duration: 200ms;
                  transition-property: border-color;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 20px;
                }
                &:after {
                  border-radius: 50%;
                  box-sizing: border-box;
                  content: "";
                  height: 0px;
                  left: 10px;
                  position: absolute;
                  right: 0px;
                  transition-duration: 200ms;
                  transition-property: border-width;
                  transition-timing-function: cubic-bezier(.4, 0, .23, 1);
                  width: 0px;
                }
            htmlFor="ChoiceGroup0-3"
          >
            <span
              className="ms-ChoiceFieldLabel"
              id="ChoiceGroupLabel1-3"
            >
              3
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
